[tool.poetry]
name = "twitter-rss"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
feedgen = "^0.9.0"
schedule = "^0.6.0"
rfeed = "^1.1.1"
twitter-scraper = "^0.4.2"
beautifulsoup4 = "^4.9.1"
getoldtweets3 = "^0.0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
